--- a/DishCover/aboutus.html
+++ b/DishCover/aboutus.html
@@ -22,7 +22,7 @@
         <li><a href="categories.html">Categories</a></li>
         <li><a href="recipes.html">Recipes</a></li>
         <li><a href="blogs.html">Blogs</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="#">About Us</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
         <li><a href="login.html">Logout</a></li>
         
