--- a/DishCover/index.html
+++ b/DishCover/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DishCover</title>
   <link rel="icon" type="image/png" href="images/logo.png">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="responsive.css">
+  <link rel="stylesheet" href="darkmode.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3glpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohG8reCfkKxlhei6S9CQXFEbbKuqlg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
   <!-- Header Section -->
   <header class="header">
-    <div class="logo">DishCover</div>
+    <div class="logo">
+      <h2><span class="red-text">Dish</span><span class="blue-text">Cover</span></h2>
+</div>
     <nav class="nav">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="categories.html">Categories</a></li>
         <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="/blogs.html">Blogs</a></li>
+        <li><a href="blogs.html">Blogs</a></li>
         <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="pages.html">Pages</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
-        <li><a href="#"><span>&#128269;</span></a></li>
-        <li><button id="darkModeToggle">🌙</button></li>
-      </ul>
-    </nav>
-  </header>
+        <li><a href="login.html">Logout</a></li>
+        </ul>
+        </nav>
+        <div class="searchbar flex">
+          <input type="checkbox" name="check-toggle" id="checkbox" hidden="">
+          <label for="checkbox" class="toggle">
+          <div class="toggle__circle"></div>
+        </label>
+        <i class="fa-solid fa-magnifying-glass"></i>
+             </div>
+             <div class="searchinput">
+            <input type="text" placeholder="Search Here...">
+            <i class="fa-solid fa-xmark"></i>
+             </div>
+      
+      </header>
 
   <!-- Hero Section -->
   <section class="hero">
@@ -37,32 +52,101 @@
     </div>
   </section>
 
-  <!-- Categories Section -->
-  <section class="categories">
-    <h2>Categories</h2>
-    <div class="category-grid">
-      <div class="category-card">Staple Foods</div>
-      <div class="category-card">Soups</div>
-      <div class="category-card">Stew</div>
-      <div class="category-card">Rice Dishes</div>
-      <div class="category-card">Street Food</div>
-      <div class="category-card">Snacks</div>
-      <div class="category-card">Protein Sources</div>
-      <div class="category-card">Beverages</div>
+ <!-- Categories Section -->
+<section class="categories">
+  <h2>Categories</h2>
+  <div class="category-grid">
+    <div class="category-card">
+      <img src="images/staple-foods.jpg" alt="Staple Foods">
+      <p>Staple Foods</p>
     </div>
-  </section>
+    <div class="category-card">
+      <img src="images/soups.jpg" alt="Soups">
+      <p>Soups</p>
+    </div>
+    <div class="category-card">
+      <img src="images/stew.jpg" alt="Stew">
+      <p>Stew</p>
+    </div>
+    <div class="category-card">
+      <img src="images/rice-dishes.jpg" alt="Rice Dishes">
+      <p>Rice Dishes</p>
+    </div>
+    <div class="category-card">
+      <img src="images/sausage.jpg" alt="Street Food">
+      <p>Street Food</p>
+    </div>
+    <div class="category-card">
+      <img src="images/snacks.jpg" alt="Snacks">
+      <p>Snacks</p>
+    </div>
+    <div class="category-card">
+      <img src="images/protein-sources.jpg" alt="Protein Sources">
+      <p>Protein Sources</p>
+    </div>
+    <div class="category-card">
+      <img src="images/beverages.jpg" alt="Beverages">
+      <p>Beverages</p>
+    </div>
+  </div>
+</section>
+
 
   <!-- Recipe Section -->
-  <section class="recipes">
-    <h2>Recipe</h2>
-    <div class="recipe-grid">
-      <div class="recipe-card">Jollof Rice</div>
-      <div class="recipe-card">Light Soup</div>
-      <div class="recipe-card">Woolley</div>
-      <div class="recipe-card">Groundnut Soup</div>
-      <div class="recipe-card">Kelewele</div>
+<section class="recipes">
+  <h2>Recipes</h2>
+  <div class="recipe-grid">
+    <div class="recipe-card">
+      <img src="images/ga-kenkey.jpg" alt="Greater Accra">
+      <p>Greater Accra</p>
     </div>
-  </section>
+    <div class="recipe-card">
+      <img src="images/fufu-light-soup.jpg" alt="Ashanti">
+      <p>Ashanti</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/ampesi-kontomire.jpg" alt="Eastern">
+      <p>Eastern</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/toozafi.jpg" alt="Northern">
+      <p>Northern</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/pito.jpg" alt="Upper East">
+      <p>Upper East</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/upper-west.jpg" alt="Upper West">
+      <p>Upper West</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/etsew-palmnut.jpg" alt="Western">
+      <p>Western</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/wele-soup.jpg" alt="Savannah">
+      <p>Savannah</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/fante-fante.jpg" alt="Central">
+      <p>Central</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/eto.jpg" alt="Bono East">
+      <p>Bono East</p>
+    </div>
+    <div class="recipe-card">
+      <img src="images/yam-gardenegg.jpg" alt="Ahafo">
+      <p>Ahafo</p>
+    </div>
+     <!-- More Button with Link -->
+     <div class="more-button-container">
+      <a href="recipes.html" class="more-button">More...</a>
+    </div>
+  </div>
+</section>
+
 
   <!-- Blogs Section -->
   <section class="blogs">
@@ -70,17 +154,45 @@
     <h2>Our Fresh Blogs</h2>
     <div class="blog-grid">
       <div class="blog-card">
-        <img src="blog1.jpg" alt="Blog 1">
-        <p>Blog post title 1</p>
+        <img src="images/blog1.jpg" alt="Blog 1">
+        <p>Wedding Events Cookies</p>
       </div>
       <div class="blog-card">
-        <img src="blog2.jpg" alt="Blog 2">
-        <p>Blog post title 2</p>
+        <img src="images/blog2.jpg" alt="Blog 2">
+        <p>Parties</p>
       </div>
       <div class="blog-card">
-        <img src="blog3.jpg" alt="Blog 3">
-        <p>Blog post title 3</p>
+        <img src="images/blog3.jpg" alt="Blog 3">
+        <p>Wedding Events</p>
       </div>
+    </div>
+  </section>
+
+  
+  <section class="img" >
+    <div class="img-cards">
+      <img src="images/ampesi-kontomire.jpg" alt="ampesi-kontomire">
+    </div>
+    <div class="img-cards">
+      <img src="images/ga-kenkey.jpg" alt="ga-kenkey">
+    </div>
+      <div class="img-cards">
+      <img src="images/fufu-light-soup.jpg" alt="fufu-light-soup">
+    </div>
+      <div class="img-cards">
+      <img src="images/waakye.jpg" alt="waakye">
+    </div>
+      <div class="img-cards">
+      <img src="images/toozafi.jpg" alt="toozafi">
+    </div>
+      <div class="img-cards">
+      <img src="images/drink.jpg" alt="drink">
+    </div>
+    <div class="img-cards">
+      <img src="images/pito.jpg" alt="pito">
+    </div>
+    <div class="img-cards">
+      <img src="images/sausage.jpg" alt="sausage">
     </div>
   </section>
 
@@ -92,7 +204,24 @@
         <p>I create unique, twist-filled recipes daily
             and share engaging blog posts with fun 
            kitchen ideas.</p>
-        <div class="social-icons">[Social Icons]</div>
+           <div class="social-icons">
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/facebook-icon.svg" alt="Facebook">
+            </a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/twitter-icon.svg" alt="Twitter">
+            </a>
+            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/linkedin-icon.svg" alt="Linkedin">
+            </a>
+            <a href="https://youtube.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/youtube-icon.svg" alt="Youtube">
+            </a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/instagram-icon.svg" alt="Instagram">
+            </a>
+          </div>
+          
       </div>
       <div class="footer-links">
         <h4>Quick Link</h4>
@@ -122,6 +251,8 @@
       <p>2025 &copy; DishCover. All Rights Reserved | Designed by Thelma Buabeng</p>
     </div>
   </footer>
+  
+
 
   <script src="script.js"></script>
 </body>
