--- a/DishCover/login.html
+++ b/DishCover/login.html
@@ -4,43 +4,41 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DishCover</title>
-  <link rel="stylesheet" href="css/login.css" />
+  <link rel="icon" type="image/png" href="images/logo.png">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js" crossorigin="anonymous"></script> 
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
-
-  <!-- Background Image Container -->
   <div class="background">
-    <!-- Top Right Buttons -->
     <div class="top-buttons">
-      <button class="btn">Sign In</button>
-      <button class="btn">Sign Up</button>
+      <a href="login.html"><button class="btn">Sign In</button></a>
+<a href="signup.html"><button class="btn">Sign Up</button></a>
+
     </div>
-
-    <!-- Login Box -->
+    
     <div class="login-box">
+      <h2><span class="red-text">Dish</span><span class="blue-text">Cover</span></h2>
+      <h3>Welcome Back</h3>
       
-      <h2><span style="color: red;">Dish</span><span style="color: #00bfff;">Cover</span></h2>
-      <p>Don't have an account? <a href="#">Sign Up</a></p>
-      <h3>Login</h3>
-
-      <form>
+      <form id="login-form">
         <div class="input-group">
-          <input type="text" placeholder="Username or Email" required />
+          <i class="fa-solid fa-user"></i>
+          <input type="text" id="username" placeholder="Username or Email" required />
         </div>
         <div class="input-group">
-          <input type="password" placeholder="Password" required />
+          <i class="fa-solid fa-lock"></i>
+          <input type="password" id="password" placeholder="Password" required />
         </div>
         <button type="submit" class="login-btn">Sign In</button>
 
         <div class="options">
-          <label><input type="checkbox" /> Remember Me</label>
-          <a href="#">Forgot Password?</a>
+          <label><input type="checkbox" id="remember-me" /> Remember Me</label>
+          <a href="forgot_password.html">Forgot Password?</a>
         </div>
+        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
       </form>
     </div>
-
   </div>
-
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
