--- a/DishCover/recipes.html
+++ b/DishCover/recipes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DishCover - Home</title>
+  <title>DishCover</title>
   <link rel="icon" type="image/png" href="images/logo.png">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,10 @@
 <body>
   <!-- Header Section -->
   <header class="header">
-    <div class="logo">DishCover</div>
+    <div class="logo">
+      <h2><span class="red-text">Dish</span><span class="blue-text">Cover</span></h2>
+      </a>
+    </div>
     <nav class="nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,12 +23,22 @@
         <li><a href="#">Recipes</a></li>
         <li><a href="blogs.html">Blogs</a></li>
         <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="pages.html">Pages</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
-        <li><a href="#"><span>&#128269;</span></a></li>
-        <li><button id="darkModeToggle">🌙</button></li>
-      </ul>
-    </nav>
+        <li><a href="login.html">Logout</a></li>
+        
+        </ul>
+      </nav>
+      <div class="searchbar flex">
+        <input type="checkbox" name="check-toggle" id="checkbox" hidden="">
+        <label for="checkbox" class="toggle">
+        <div class="toggle__circle"></div>
+      </label>
+      <i class="fa-solid fa-magnifying-glass"></i>
+           </div>
+           <div class="searchinput">
+          <input type="text" placeholder="Search Here...">
+          <i class="fa-solid fa-xmark"></i>
+           </div>
   </header>
 
   <!-- Hero Section -->
@@ -37,53 +50,81 @@
     </div>
   </section>
 
-  <!-- Categories Section -->
-  <section class="categories">
-    <h2>Categories</h2>
-    <div class="category-grid">
-      <div class="category-card">Staple Foods</div>
-      <div class="category-card">Soups</div>
-      <div class="category-card">Stew</div>
-      <div class="category-card">Rice Dishes</div>
-      <div class="category-card">Street Food</div>
-      <div class="category-card">Snacks</div>
-      <div class="category-card">Protein Sources</div>
-      <div class="category-card">Beverages</div>
-    </div>
-  </section>
+  
 
-  <!-- Recipe Section -->
-  <section class="recipes">
-    <h2>Recipe</h2>
-    <div class="recipe-grid">
-      <div class="recipe-card">Jollof Rice</div>
-      <div class="recipe-card">Light Soup</div>
-      <div class="recipe-card">Woolley</div>
-      <div class="recipe-card">Groundnut Soup</div>
-      <div class="recipe-card">Kelewele</div>
-    </div>
-  </section>
+   <!-- Recipe Section -->
+<section class="recipes">
+  <h2>Regional Ghanaian Recipes</h2>
+  <div class="recipe-grid">
+    <a href="greateraccra.html" class="recipe-card">
+      <img src="images/ga-kenkey.jpg" alt="Greater Accra">
+      <p>Greater Accra</p>
+    </a>
+    <a href="ashanti.html" class="recipe-card">
+      <img src="images/fufu-light-soup.jpg" alt="Ashanti">
+      <p>Ashanti</p>
+    </a>
+    <a href="volta.html" class="recipe-card">
+      <img src="images/akple-fetri-detsi.jpg" alt="Volta">
+      <p>Volta</p>
+    </a>
+    <a href="eastern.html" class="recipe-card">
+      <img src="images/ampesi-kontomire.jpg" alt="Eastern">
+      <p>Eastern</p>
+    </a>
+    <a href="northen.html" class="recipe-card">
+      <img src="images/toozafi.jpg" alt="Northern">
+      <p>Northern</p>
+    </a>
+    <a href="uppereast.html" class="recipe-card">
+      <img src="images/pito.jpg" alt="Upper East">
+      <p>Upper East</p>
+    </a>
+    <a href="upperwest.html" class="recipe-card">
+      <img src="images/upper-west.jpg" alt="Upper West">
+      <p>Upper West</p>
+    </a>
+    <a href="western.html" class="recipe-card">
+      <img src="images/etsew-palmnut.jpg" alt="Western">
+      <p>Western</p>
+    </a>
+    <a href="central.html" class="recipe-card">
+      <img src="images/fante-fante.jpg" alt="Central">
+      <p>Central</p>
+    </a>
+    <a href="bono.html" class="recipe-card">
+      <img src="images/ampesi-kontomire.jpg" alt="Bono">
+      <p>Bono</p>
+    </a>
+    <a href="bonoeast.html" class="recipe-card">
+      <img src="images/eto.jpg" alt="Bono East">
+      <p>Bono East</p>
+    </a>
+    <a href="ahafo.html" class="recipe-card">
+      <img src="images/yam-gardenegg.jpg" alt="Ahafo">
+      <p>Ahafo</p>
+    </a>
+    <a href="savannah.html".html" class="recipe-card">
+      <img src="images/wele-soup.jpg" alt="Savannah">
+      <p>Savannah</p>
+    </a>
+    <a href="northeast.html" class="recipe-card">
+      <img src="images/riceball-groundnut.jpg" alt="North East">
+      <p>North East</p>
+    </a>
+    <a href="oti.html" class="recipe-card">
+      <img src="images/yamfufu-fishsoup.jpg" alt="Oti">
+      <p>Oti</p>
+    </a>
+    <a href="westernnorth.html" class="recipe-card">
+      <img src="images/konkonte.jpg" alt="Western North">
+      <p>Western North</p>
+    </a>
+  </div>
+</section>
 
-  <!-- Blogs Section -->
-  <section class="blogs">
-    <h3>Latest News</h3>
-    <h2>Our Fresh Blogs</h2>
-    <div class="blog-grid">
-      <div class="blog-card">
-        <img src="blog1.jpg" alt="Blog 1">
-        <p>Blog post title 1</p>
-      </div>
-      <div class="blog-card">
-        <img src="blog2.jpg" alt="Blog 2">
-        <p>Blog post title 2</p>
-      </div>
-      <div class="blog-card">
-        <img src="blog3.jpg" alt="Blog 3">
-        <p>Blog post title 3</p>
-      </div>
-    </div>
-  </section>
 
+  
   <!-- Footer Section -->
   <footer class="footer">
     <div class="footer-sections">
@@ -92,7 +133,23 @@
         <p>I create unique, twist-filled recipes daily
             and share engaging blog posts with fun 
            kitchen ideas.</p>
-        <div class="social-icons">[Social Icons]</div>
+           <div class="social-icons">
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/facebook-icon.svg" alt="Facebook">
+            </a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/twitter-icon.svg" alt="Twitter">
+            </a>
+            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/linkedin-icon.svg" alt="Linkedin">
+            </a>
+            <a href="https://youtube.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/youtube-icon.svg" alt="Youtube">
+            </a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">
+              <img src="images/instagram-icon.svg" alt="Instagram">
+            </a>
+          </div>
       </div>
       <div class="footer-links">
         <h4>Quick Link</h4>
