--- a/DishCover/recipes.html
+++ b/DishCover/recipes.html
@@ -34,7 +34,7 @@
         <button onclick="searchRecipe()">Search</button>
     </div>
     
-    <div id="results"></div> <!-- This will display the results -->
+    <div id="results"></div> 
     
         <div class="searchbar flex">
           <input type="checkbox" name="check-toggle" id="checkbox" hidden="">
